--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: java
 sudo: required
+install: true
+script: mvn clean package -DskipTests=true
+sudo: required
 jdk:
-  - oraclejdk8  
+  - oraclejdk9
+notifications:
+  email: false
